fixed z-index so spot containers are clickable again

--- a/frontend/src/components/Spots/Spots.css
+++ b/frontend/src/components/Spots/Spots.css
@@ -20,7 +20,7 @@
     /* background-color: aqua; */
     /* width: fit-content; */
     position: relative;
-    z-index: -1;
+    /* z-index: -1; */
 
 }
 
